# 1337ft

./: .editorconfig  .pre-commit-config.yaml  AUTHORS.md  Dockerfile  HISTORY.md  Makefile  README.md  compose.yaml  pyproject.toml  requirements.txt
1337ft/: __init__.py  __main__.py  bypass.py  views.py
1337ft/static/: style.css
1337ft/templates/: index.html
tests/: conftest.py  test_bypass.py  test_views.py
